# Common

./: CMakeLists.txt
assets/common_shaders/: instanced.vert  pass_through.vert  scene.frag
assets/common_shaders/common/: offset.glsl
assets/common_shaders/post/: blur.frag  color_correction.frag  dof_blur.frag  dof_blur.frag.bak  dof_composite.frag  dof_composite.frag.bak  fog.frag  fxaa.frag  vignette.frag
proj/cmake/: CommonConfig.cmake
src/Fx/: BlurFx.cpp  BlurFx.h  ColorCorrectionFx.cpp  ColorCorrectionFx.h  DoFFx.cpp  DoFFx.h  FXAAFx.cpp  FXAAFx.h  FogFx.cpp  FogFx.h  Fx.h  FxChain.cpp  FxChain.h  VignetteFx.cpp  VignetteFx.h
src/RIR/: IndieResolutionRenderer.cpp  IndieResolutionRenderer.h
tests/: CMakeLists.txt  FxApp.cpp  RIRApp.cpp
